Added trajectory endpoint

--- a/conf/settings.conf
+++ b/conf/settings.conf
@@ -1,3 +1,6 @@
 NUMBER_OF_ARTICULATIONS = 2
 ARTICULATION_0_IP = '192.168.0.130'
 ARTICULATION_1_IP = '192.168.0.131'
+ARTICULATION_0_LENGTH = 40
+ARTICULATION_1_IP = '192.168.0.131'
+ARTICULATION_1_LENGTH = 40
